--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "start": "vite"
   },
   "devDependencies": {
     "vite": "^3.1.0"
